--- a/digit_recognizer.ipynb
+++ b/digit_recognizer.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "digit-recognizer.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOp+oE8cKigiVH3oIesCKJ5",
+      "authorship_tag": "ABX9TyNrxBOZTkC64laCgoqY/fds",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,7 +27,125 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PS-GprZibzaq"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xa7g4dbseeb4",
+        "outputId": "8df3ea3c-0cb5-4b39-d7fb-f5e61b08d0ab"
+      },
+      "source": [
+        "!git clone https://github.com/harbenml/digit-recognizer.git"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Cloning into 'digit-recognizer'...\n",
+            "remote: Enumerating objects: 60, done.\u001b[K\n",
+            "remote: Counting objects: 100% (60/60), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (39/39), done.\u001b[K\n",
+            "remote: Total 60 (delta 27), reused 45 (delta 19), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (60/60), done.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fP1ELyuMenHi",
+        "outputId": "d0712076-7911-484f-9ab9-7c85422681dc"
+      },
+      "source": [
+        "%cd digit-recognizer/"
+      ],
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/content/digit-recognizer\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qE77nCEhjJGr"
+      },
+      "source": [
+        "!mkdir data "
+      ],
+      "execution_count": 36,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QvGY7ab1jNzX",
+        "outputId": "7d0207f5-d728-4b42-c94b-92c6c7809912"
+      },
+      "source": [
+        "!ls"
+      ],
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "data\t\t\tenvironment.yml  README.md\t   src\n",
+            "digit_recognizer.ipynb\tLICENSE\t\t requirements.txt  tests\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "P4R4TOnze85q",
+        "outputId": "973af371-a58c-441d-8377-33d2094761b4"
+      },
+      "source": [
+        "%run src/train.py"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0 0.2793207233786583\n",
+            "1 0.20725710129141808\n",
+            "2 0.19294422855973245\n",
+            "3 0.1779872109860182\n",
+            "4 0.1546501990288496\n",
+            "5 0.1386330849736929\n",
+            "6 0.13309259172081947\n",
+            "7 0.12178412152975798\n",
+            "8 0.131682670840621\n",
+            "9 0.1432233671233058\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WtSGtDVce04O"
       },
       "source": [
         ""
