--- a/digit_recognizer.ipynb
+++ b/digit_recognizer.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "digit-recognizer.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNrxBOZTkC64laCgoqY/fds",
+      "authorship_tag": "ABX9TyPnj3HU1nCY2ccqN6iis9PS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,6 +27,192 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "qDehAz6qf5ed",
+        "outputId": "fa5b9032-f092-455e-f274-a3adf6c69243",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "import os \n",
+        "import sys\n",
+        "import subprocess\n",
+        "\n",
+        "REPO_LOCATION = 'https://github.com/harbenml/digit-recognizer.git'\n",
+        "REPO_NAME = 'digit-recognizer'\n",
+        "REPO_BRANCH = 'master'\n",
+        "\n",
+        "# Clone the repository\n",
+        "print('cloning the repository')\n",
+        "subprocess.call(['git', 'clone', REPO_LOCATION])"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "cloning the repository\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "95pcHKqPgqo1",
+        "outputId": "70ed8b0f-b0c5-4947-d225-aa3fe96bbaca",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!ls"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "digit-recognizer  sample_data\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LMoL5cP1f4zI"
+      },
+      "source": [
+        "# Setting env variables\n",
+        "sys.path.append(REPO_NAME)"
+      ],
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OGw1RnmThEGN",
+        "outputId": "e51bcfc6-28ae-4b52-8ba5-d47d4cf547be",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "sys.path"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['',\n",
+              " '/env/python',\n",
+              " '/usr/lib/python36.zip',\n",
+              " '/usr/lib/python3.6',\n",
+              " '/usr/lib/python3.6/lib-dynload',\n",
+              " '/usr/local/lib/python3.6/dist-packages',\n",
+              " '/usr/lib/python3/dist-packages',\n",
+              " '/usr/local/lib/python3.6/dist-packages/IPython/extensions',\n",
+              " '/root/.ipython',\n",
+              " 'digit-recognizer',\n",
+              " 'digit-recognizer']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NqHoqNOphJw5",
+        "outputId": "bb55a9ba-4509-4ea5-e3de-ccaa8b22c40b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%cd digit-recognizer/\n",
+        "%ls\n"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/content/digit-recognizer\n",
+            "digit_recognizer.ipynb  LICENSE    requirements.txt  \u001b[0m\u001b[01;34mtests\u001b[0m/\n",
+            "environment.yml         README.md  \u001b[01;34msrc\u001b[0m/\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "r9JJ2u5zgVm2",
+        "outputId": "5901fb3f-deed-432c-93e7-422a2ee90bd1",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 419
+        }
+      },
+      "source": [
+        "from src.train import fit"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ModuleNotFoundError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-13-b647167a6853>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0msrc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mfit\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/content/digit-recognizer/src/train.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mtyping\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mCallable\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mdata_io\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mget_data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mdataloader\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mget_dataloaders\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mloss\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mloss_batch\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'data_io'",
+            "",
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jpeFCsdugVXw"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
@@ -36,7 +222,7 @@
       "source": [
         "!git clone https://github.com/harbenml/digit-recognizer.git"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -64,7 +250,7 @@
       "source": [
         "%cd digit-recognizer/"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -83,7 +269,7 @@
       "source": [
         "!mkdir data "
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -98,7 +284,7 @@
       "source": [
         "!ls"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -122,7 +308,7 @@
       "source": [
         "%run src/train.py"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
