--- a/digit_recognizer.ipynb
+++ b/digit_recognizer.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "digit-recognizer.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPnj3HU1nCY2ccqN6iis9PS",
+      "authorship_tag": "ABX9TyOzspXAY4XNn6igLYeL3y10",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,10 +28,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "qDehAz6qf5ed",
-        "outputId": "fa5b9032-f092-455e-f274-a3adf6c69243",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8aa632ff-e963-426f-edad-54dcefbaa03b"
       },
       "source": [
         "import os \n",
@@ -46,7 +46,7 @@
         "print('cloning the repository')\n",
         "subprocess.call(['git', 'clone', REPO_LOCATION])"
       ],
-      "execution_count": 6,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -65,7 +65,30 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PpV41iIqhLud",
+        "outputId": "9c425ff7-9d71-4ee6-b638-238dff4d151d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "ls"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\u001b[0m\u001b[01;34mdigit-recognizer\u001b[0m/  \u001b[01;34msample_data\u001b[0m/\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -73,20 +96,46 @@
       "cell_type": "code",
       "metadata": {
         "id": "95pcHKqPgqo1",
-        "outputId": "70ed8b0f-b0c5-4947-d225-aa3fe96bbaca",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1e02ee6f-d8df-4383-c29b-c13c4cf6932b"
+      },
+      "source": [
+        "cd digit-recognizer/"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/content/digit-recognizer\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7SUHG8gBgR8T",
+        "outputId": "4eb61e30-5962-4bbe-868c-f28dee51913d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "!ls"
+        "pip install -e ."
       ],
-      "execution_count": 7,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "digit-recognizer  sample_data\n"
+            "Obtaining file:///content/digit-recognizer\n",
+            "Installing collected packages: digit-recognizer\n",
+            "  Running setup.py develop for digit-recognizer\n",
+            "Successfully installed digit-recognizer\n"
           ],
           "name": "stdout"
         }
@@ -101,22 +150,22 @@
         "# Setting env variables\n",
         "sys.path.append(REPO_NAME)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "OGw1RnmThEGN",
-        "outputId": "e51bcfc6-28ae-4b52-8ba5-d47d4cf547be",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "1a428ab1-bf31-4e8b-e863-ef7d9f455d16"
       },
       "source": [
         "sys.path"
       ],
-      "execution_count": 11,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -130,15 +179,13 @@
               " '/usr/local/lib/python3.6/dist-packages',\n",
               " '/usr/lib/python3/dist-packages',\n",
               " '/usr/local/lib/python3.6/dist-packages/IPython/extensions',\n",
-              " '/root/.ipython',\n",
-              " 'digit-recognizer',\n",
-              " 'digit-recognizer']"
+              " '/root/.ipython']"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 16
         }
       ]
     },
@@ -146,16 +193,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "NqHoqNOphJw5",
-        "outputId": "bb55a9ba-4509-4ea5-e3de-ccaa8b22c40b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "bb55a9ba-4509-4ea5-e3de-ccaa8b22c40b"
       },
       "source": [
         "%cd digit-recognizer/\n",
         "%ls\n"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -171,44 +218,59 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "r9JJ2u5zgVm2",
-        "outputId": "5901fb3f-deed-432c-93e7-422a2ee90bd1",
+        "id": "wOA2cN0Nh0m_",
+        "outputId": "18768aaa-b738-4062-d78b-dafb17933f9c",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 419
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "from src.train import fit"
+        "cd src"
       ],
-      "execution_count": 13,
+      "execution_count": 20,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "ModuleNotFoundError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-13-b647167a6853>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0msrc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mfit\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/content/digit-recognizer/src/train.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mtyping\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mCallable\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mdata_io\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mget_data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mdataloader\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mget_dataloaders\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mloss\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mloss_batch\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'data_io'",
-            "",
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
-          ]
+          "output_type": "stream",
+          "text": [
+            "/content/digit-recognizer/src\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jpeFCsdugVXw"
+        "id": "r9JJ2u5zgVm2"
       },
       "source": [
-        ""
+        "from train import fit"
       ],
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jpeFCsdugVXw",
+        "outputId": "160426c3-6cb3-4579-bdfc-cf852aca97d2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "cd .."
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/content/digit-recognizer\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -269,7 +331,7 @@
       "source": [
         "!mkdir data "
       ],
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -303,26 +365,26 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "P4R4TOnze85q",
-        "outputId": "973af371-a58c-441d-8377-33d2094761b4"
+        "outputId": "2a5f2c0c-fa82-4c93-af22-799a958f9eae"
       },
       "source": [
         "%run src/train.py"
       ],
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "0 0.2793207233786583\n",
-            "1 0.20725710129141808\n",
-            "2 0.19294422855973245\n",
-            "3 0.1779872109860182\n",
-            "4 0.1546501990288496\n",
-            "5 0.1386330849736929\n",
-            "6 0.13309259172081947\n",
-            "7 0.12178412152975798\n",
-            "8 0.131682670840621\n",
-            "9 0.1432233671233058\n"
+            "0 0.284397640812397\n",
+            "1 0.21325406964421273\n",
+            "2 0.19336313940286637\n",
+            "3 0.19619925224483012\n",
+            "4 0.1723545458495617\n",
+            "5 0.16174648453593254\n",
+            "6 0.1594652995288372\n",
+            "7 0.15989073149263858\n",
+            "8 0.14550159180760383\n",
+            "9 0.15833424201607704\n"
           ],
           "name": "stdout"
         }
