--- a/digit_recognizer.ipynb
+++ b/digit_recognizer.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "digit-recognizer.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMKNs1kkSwPiKR7TDd6ZfZb",
+      "authorship_tag": "ABX9TyMeGnDNARsXBVQIgGh335YW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,7 +42,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "589413d9-2cd4-432f-ee23-cdb718857de3"
+        "outputId": "2fb88ca3-41e3-47e6-c608-1ebb9f5d38d6"
       },
       "source": [
         "import os \n",
@@ -62,32 +62,26 @@
         "sys.path.append(REPO_NAME)\n",
         "\n",
         "# Change folder and create data folder where the MNIST data will be downloaded\n",
-        "cd digit-recognizer/\n",
+        "%cd digit-recognizer/\n",
         "!mkdir data\n",
         "\n",
         "# Install digit-recognizer package\n",
-        "pip install -e ."
+        "!pip install -e ."
       ],
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "cloning the repository\n"
+            "cloning the repository\n",
+            "set path to repository\n",
+            "/content/digit-recognizer\n",
+            "Obtaining file:///content/digit-recognizer\n",
+            "Installing collected packages: digit-recognizer\n",
+            "  Running setup.py develop for digit-recognizer\n",
+            "Successfully installed digit-recognizer\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "128"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 2
         }
       ]
     },
@@ -109,23 +103,34 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "P4R4TOnze85q",
-        "outputId": "29ea9ee4-57da-42e9-89d6-9d6441e2e3a2"
+        "outputId": "ed0fde8b-e0d5-4ca1-e94c-27c8395da828"
       },
       "source": [
         "%run src/train.py"
       ],
-      "execution_count": 15,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Start training\n",
-            "0 0.9962779569625855\n",
-            "1 0.945224040222168\n"
+            "0 0.353146288895607\n",
+            "1 0.24472660276293753\n"
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "33EHFX9RQqCd"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
