--- a/digit_recognizer.ipynb
+++ b/digit_recognizer.ipynb
@@ -11,7 +11,8 @@
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -42,7 +43,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2fb88ca3-41e3-47e6-c608-1ebb9f5d38d6"
+        "outputId": "6592cf9e-00ec-4628-edb4-b534adb821af"
       },
       "source": [
         "import os \n",
@@ -68,7 +69,7 @@
         "# Install digit-recognizer package\n",
         "!pip install -e ."
       ],
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -103,19 +104,48 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "P4R4TOnze85q",
-        "outputId": "ed0fde8b-e0d5-4ca1-e94c-27c8395da828"
+        "outputId": "31d9e65e-8c67-4257-cbb3-5dfe5a0e6d0d"
       },
       "source": [
         "%run src/train.py"
       ],
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "Training uses GPU\n",
             "Start training\n",
-            "0 0.353146288895607\n",
-            "1 0.24472660276293753\n"
+            "0 0.2958352260828018\n",
+            "1 0.24749458496570587\n",
+            "2 0.17223669740855693\n",
+            "3 0.1563050105318427\n",
+            "4 0.16006772804409267\n",
+            "5 0.12135692258924245\n",
+            "6 0.12485960521996022\n",
+            "7 0.16475126382187008\n",
+            "8 0.13480418167561292\n",
+            "9 0.11085765353068709\n",
+            "10 0.11908775630742312\n",
+            "11 0.15913258737921715\n",
+            "12 0.11838554438054562\n",
+            "13 0.11832296877466142\n",
+            "14 0.10262184494100511\n",
+            "15 0.10548532049804926\n",
+            "16 0.10962582691218704\n",
+            "17 0.10550819389633834\n",
+            "18 0.1129398507013917\n",
+            "19 0.10216410299241543\n",
+            "20 0.10200384931787848\n",
+            "21 0.11322122722789645\n",
+            "22 0.11305409512864426\n",
+            "23 0.10369003893276676\n",
+            "24 0.13487056179344653\n",
+            "25 0.11697107792533934\n",
+            "26 0.10973275864645839\n",
+            "27 0.1059449107721448\n",
+            "28 0.11566888131033629\n",
+            "29 0.11012615666501224\n"
           ],
           "name": "stdout"
         }
